--- a/index.html
+++ b/index.html
@@ -14,10 +14,26 @@
 <h4>fourth heading</h4>
 <h5>fifth heading</h5>
 <h6>sixth heading</h6>
+
+<h1> This is <small> small</small></h1>
+<h2> This is <strong> strong</strong></h2>
+<h3>This is<del>deleted</del></h3>
+<h4>This is<b>bold<b></h4>
+<h5>This is <i>italic</i></h5>
+<h6>this is <em>text</em></h6>
+<h1 style="position: relative;"></h1>
+<h2 style="background-color: black;"></h2>
+<h3 style="text-align: left;"></h3>
+
 <!--paragraph tag-->
-<p>hello everyone</p>
+<p>Thisis simple paragraph</p>
+<p><SMALL> Hello everyone</SMALL></p>
 <article> This is my first html page</article>
-<P1> my name is Riya Raj</P1>
+<P><strong> My name is Riya Raj</strong></P>
+<p><del>I am in class 8</del></p>
+<p><b>Studying at st.joseph school.</b></p>
+<p><I>I am intrested in reading novels</I></p>
+<P><em>Now learning web devlopement</em></P>
 </section>
 <!--anchor tag-->
 <a href ="https://www.google.com/>"link to google></a>
