--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <P><em>Now learning web devlopement</em></P>
 </section>
 <!--anchor tag-->
-<a href ="https://www.google.com/>"link to google></a>
+<a href ="https://www.google.com/">link to google</a>
 
 <a href="https://www.youtube.com/"> link to youtube</a>
 <!--image tag-->
