--- a/index.html
+++ b/index.html
@@ -3,44 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY FIRST WEB PAGE </title>
+    <title>THIRD TASK</title>
 </head>
 <body>
-<section>
-<!--Heading Tags-->
-<h1> first heading </h1>
-<h2> second heading</h2>
-<h3 >third heading</h3>
-<h4>fourth heading</h4>
-<h5>fifth heading</h5>
-<h6>sixth heading</h6>
-
-<h1> This is <small> small</small></h1>
-<h2> This is <strong> strong</strong></h2>
-<h3>This is<del>deleted</del></h3>
-<h4>This is<b>bold<b></h4>
-<h5>This is <i>italic</i></h5>
-<h6>this is <em>text</em></h6>
-<h1 style="position: relative;"></h1>
-<h2 style="background-color: black;"></h2>
-<h3 style="text-align: left;"></h3>
-
-<!--paragraph tag-->
-<p>Thisis simple paragraph</p>
-<p><SMALL> Hello everyone</SMALL></p>
-<article> This is my first html page</article>
-<P><strong> My name is Riya Raj</strong></P>
-<p><del>I am in class 8</del></p>
-<p><b>Studying at st.joseph school.</b></p>
-<p><I>I am intrested in reading novels</I></p>
-<P><em>Now learning web devlopement</em></P>
-</section>
-<!--anchor tag-->
-<a href ="https://www.google.com/">link to google</a>
-
-<a href="https://www.youtube.com/"> link to youtube</a>
-<!--image tag-->
-<img src="maxresdefault.jpg">
-<img src="nature-water-rocks-128187.jpg">
+    <header>This is my third web page</header>
+    <h1 style="text-align: center;" style="float: right;">About the poet
+    </h1>
+<article><strong>John Keats</strong> is considerd one of the greatest of english poets.<br>
+    The son of a livery,keat attended the school at enfield england.</br>The son of a livery,keat attended the school at enfield england. In some of the poems
+    we can get a good idea about John Keats love for nature and his knowledge in first hand.In some of the poems
+    we can get a good idea about John Keats love for nature and his knowledge in first hand.
+    In some of the poems we can get a good idea about John Keats love for nature and his
+    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
+    The son of a livery,keat attended the school at enfield england.
+    The son of a livery,keat attended the school at enfield england.
+ </article>
+ <img src="john-keats-9361568-1-402.jpg" img style="height:21">
+ <p><b>John Keats</b> is considerd one of the greatest of english poets.
+    The son of a livery,keat attended the school at enfield england. In some of the poems
+    we can get a good idea about John Keats love for nature and his knowledge in first hand.
+    some of the poems we can get a good idea about John Keats love for nature and his
+    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
+    The son of a livery,keat attended the school at enfield england.The son of a livery,
+    keat attended the school at enfield england. some of the poems we can get a good idea about John Keats love for nature and his
+    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
+    The son of a livery,keat attended the school at enfield england.The son of a livery,keat
+     attended the school at enfield england.
+</p>
+<h2>To get more information about John Keats click the link given
+    <a href="https://www.poetryfoundation.org/poets/john-keats"></a>
+</h2>
+<h1><strong>SOME OF THE POEMS OF JOHN KEATS</strong></h1>
+It is in order list.
+<ol>
+    <li>Ode to a Nightingale.</li>
+    <li>To Autumn.</li>
+     <li>Ode on a Grecian Urn.</li>
+     <li>The Human Seasons.</li>
+     <li>A Thing of Beauty (Endymion).</li>
+</ol>
+It is in unorder list.
+<ul>
+    <li>“Bright star, would I were stedfast as thou art” (1819)</li>
+    <li> “To Autumn” (1819)</li>
+    <li> “On Seeing the Elgin Marbles” (1817)</li>
+     <li>“To Sleep” (1816)</li>
+     <li> Ode to a Nightingale (1819)</li>
+     <li>Ode on Melancholy (1819)</li>
+</ul>
+<h1>THE BOOKS AND PRICES</h1>
+<table>
+ <tr>
+    <th>books</th>
+    <th>price</th>
+ </tr>
+ <tr>
+     <td>To sleep</td>
+     <td>200</td>
+ </tr>
+ <tr>
+     <td>Ode to Nightingale</td>
+     <td>250</td>
+</tr>
+</table>
+<H3>FORM TO log in..</H3>
+<form action="john keats.com"method="get">
+<div>
+<label>NAME</label>
+<input type="text" name="name" id="name" placeholder="user name">
+</div>
+<div>
+<label>password</label>
+<input type="password" name="password" id="password" placeholder="1234">
+</div>
+<div>
+<label>phone no.</label>
+<input type="number" name="phone" id="number" placeholder="1234567890">
+</div>
+<div>
+<label>time</label>
+<input type="time" name="time" id="time" placeholder="2:00">
+<div>
+<label>email</label>
+<input type="text" name="email" id="email" placeholder="your@gmail.com">
+<div>
+<label>food</label>
+<input type="text">
+</div>
+<button>submit</button>
+</form>
+<footer>HOPE YOU LIKE IT !!!</footer>
+    
 </body>
 </html>
