--- a/index.html
+++ b/index.html
@@ -3,96 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THIRD TASK</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>This is my third web page</header>
-    <h1 style="text-align: center;" style="float: right;">About the poet
-    </h1>
-<article><strong>John Keats</strong> is considerd one of the greatest of english poets.<br>
-    The son of a livery,keat attended the school at enfield england.</br>The son of a livery,keat attended the school at enfield england. In some of the poems
-    we can get a good idea about John Keats love for nature and his knowledge in first hand.In some of the poems
-    we can get a good idea about John Keats love for nature and his knowledge in first hand.
-    In some of the poems we can get a good idea about John Keats love for nature and his
-    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
-    The son of a livery,keat attended the school at enfield england.
-    The son of a livery,keat attended the school at enfield england.
- </article>
- <img src="john-keats-9361568-1-402.jpg" img style="height:21">
- <p><b>John Keats</b> is considerd one of the greatest of english poets.
-    The son of a livery,keat attended the school at enfield england. In some of the poems
-    we can get a good idea about John Keats love for nature and his knowledge in first hand.
-    some of the poems we can get a good idea about John Keats love for nature and his
-    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
-    The son of a livery,keat attended the school at enfield england.The son of a livery,
-    keat attended the school at enfield england. some of the poems we can get a good idea about John Keats love for nature and his
-    knowledge in his first hand.The son of a livery,keat attended the school at enfield england.
-    The son of a livery,keat attended the school at enfield england.The son of a livery,keat
-     attended the school at enfield england.
+<h1><strong> <span style="background-color: yellow;">
+    collen van lent
+</span> </strong> </h1>
+
+    <a href="https://www.poetryfoundation.org/poets/john-keats"> one</a>
+    <a href="https://www.poetryfoundation.org/poets/john-keats"> two</a>
+    <a href="https://www.poetryfoundation.org/poets/john-keats"> three</a>
+
+       <span style="background-color: yellow;">
+        your choice
+    </span>
+
+    </div>
+    <h2><b>favorite food</b></h2>
+    <or>
+    <li><span style="background-color: yellow;" >
+    Apple</span></li>
+
+    <li><span style="background-color: yellow;">
+    Pizza</li>
+
+    <Li><span style="background-color: yellow;">crab</Li>
+
+    <li> <span style="background-color: yellow;">choclate cake</li>
+    </or>
+
+<h2>Achivements</h2>
+
+<li><label for="file"> progress in this course (100%) </label>
+<progress id="file" value="100" max="100%">100%</progress></li>
+
+<li><label for="file">progress in specilazation capstone (20%)</label>
+<progress id="file" value="20%" max="20%">20%</progress></li>
+
+<Li><label for="file">progress in goals (67%) </label>
+<progress id="file" value="67%" max="70%">67%</progress></Li>
+
+<h1>More about me</h1>
+<details>
+<summary>My childhood</summary>
+<p>I grew up in Ashtabula Ohio. I lived near lake erie and i really miss the sunset over the
+water.</p>
+</details>
+<img src="newlogo.png">
+<p>This page was created by Riya Raj & collen ven lent. To know more about web design.<a href="https://www.nvii-media.com/" visit to this page ></a>
+     
 </p>
-<h2>To get more information about John Keats click the link given
-    <a href="https://www.poetryfoundation.org/poets/john-keats"></a>
-</h2>
-<h1><strong>SOME OF THE POEMS OF JOHN KEATS</strong></h1>
-It is in order list.
-<ol>
-    <li>Ode to a Nightingale.</li>
-    <li>To Autumn.</li>
-     <li>Ode on a Grecian Urn.</li>
-     <li>The Human Seasons.</li>
-     <li>A Thing of Beauty (Endymion).</li>
-</ol>
-It is in unorder list.
-<ul>
-    <li>“Bright star, would I were stedfast as thou art” (1819)</li>
-    <li> “To Autumn” (1819)</li>
-    <li> “On Seeing the Elgin Marbles” (1817)</li>
-     <li>“To Sleep” (1816)</li>
-     <li> Ode to a Nightingale (1819)</li>
-     <li>Ode on Melancholy (1819)</li>
-</ul>
-<h1>THE BOOKS AND PRICES</h1>
-<table>
- <tr>
-    <th>books</th>
-    <th>price</th>
- </tr>
- <tr>
-     <td>To sleep</td>
-     <td>200</td>
- </tr>
- <tr>
-     <td>Ode to Nightingale</td>
-     <td>250</td>
-</tr>
-</table>
-<H3>FORM TO log in..</H3>
-<form action="john keats.com"method="get">
-<div>
-<label>NAME</label>
-<input type="text" name="name" id="name" placeholder="user name">
-</div>
-<div>
-<label>password</label>
-<input type="password" name="password" id="password" placeholder="1234">
-</div>
-<div>
-<label>phone no.</label>
-<input type="number" name="phone" id="number" placeholder="1234567890">
-</div>
-<div>
-<label>time</label>
-<input type="time" name="time" id="time" placeholder="2:00">
-<div>
-<label>email</label>
-<input type="text" name="email" id="email" placeholder="your@gmail.com">
-<div>
-<label>food</label>
-<input type="text">
-</div>
-<button>submit</button>
-</form>
-<footer>HOPE YOU LIKE IT !!!</footer>
-    
+
 </body>
 </html>
