--- a/index.html
+++ b/index.html
@@ -3,48 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>task 4 css</title>
+
+    <style>
+        span{ background-color: yellow;}
+
+        h1{font-size: 40px;}
+        
+    </style>
+
 </head>
 <body>
-<h1><strong> <span style="background-color: yellow;">
+
+<h1>
+    <span>
     collen van lent
-</span> </strong> </h1>
+    </span>
+</h1>
 
     <a href="https://www.poetryfoundation.org/poets/john-keats"> one</a>
     <a href="https://www.poetryfoundation.org/poets/john-keats"> two</a>
     <a href="https://www.poetryfoundation.org/poets/john-keats"> three</a>
 
-       <span style="background-color: yellow;">
+<span>
         your choice
-    </span>
-    </div>
+ </span>
 
-    <h2><b>favorite food</b></h2>
+    <h1><b>favorite food</h1>
 
     <or>
 
-    <li><span style="background-color: yellow;" >
-    Apple</span></li>
+    <li><span>Apple</span></li>
 
-    <li><span style="background-color: yellow;">
-    Pizza</li>
+    <li><span>Pizza</span></li>
 
-    <Li><span style="background-color: yellow;">crab</Li>
+    <Li><span>crab</span></Li>
 
-    <li> <span style="background-color: yellow;">choclate cake</li>
+    <li> <span>choclate cake</span></li>
 
     </or>
 
-<h2>Achivements</h2>
+<!--progress tag-->
+
+<h1>Achivements</h1>
 
 <li><label for="file"> progress in this course (100%) </label>
 <progress id="file" value="100" max="100%">100%</progress></li>
 
-<li><label for="file">progress in specilazation capstone (20%)</label>
-<progress id="file" value="20%" max="20%">20%</progress></li>
+<li><label for="file">progress in specilazation capstone (20%) </label>
+<progress id="file" value="20" max="20%">20%</progress></li>
 
-<Li><label for="file">progress in goals (67%) </label>
-<progress id="file" value="67%" max="70%">67%</progress></Li>
+<Li><label for="file"> <span>progress in goals (67%)</span> </label>
+<progress id="file" value="67" max="67%">67%</progress></Li>
+
+<!--summary-->
 
 <h1>More about me</h1>
 
@@ -52,15 +64,20 @@
 
 <summary>My childhood</summary>
 
-<p>I grew up in Ashtabula Ohio. I lived near lake erie and i really miss the sunset over the
-water.</p>
+<p>
+    <span> I grew up in Ashtabula Ohio. I lived near lake erie and i really miss the sunset over the
+     water.</span>
+</p>
 
 </details>
 
 <img src="newlogo.png">
-<p>This page was created by Riya Raj & collen ven lent. To know more about web design.<a href="https://www.nvii-media.com/" visit to this page ></a>
-     
-</p>
+
+<aside>
+This page was created by Riya Raj & collen ven lent. To know more about web design.
+<a href="https://www.nvii-media.com/"> visit it.</a>
+</aside>
+
 
 </body>
 </html>
