--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
  </span>
     <h1><b>favorite food</h1>
 
-    <or>
+    <ol>
     <li><span>Apple</span></li>
     <li><span>Pizza</span></li>
     <Li><span>crab</span></Li>
     <li> <span>choclate cake</span></li>
-    </or>
+    </ol>
 
 <!--progress tag-->
 
@@ -65,10 +65,10 @@
 
 <img src="newlogo.png">
 
-<aside>
+<Footer>
 This page was created by Riya Raj & collen ven lent. To know more about web design.
 <a href="https://www.nvii-media.com/"> visit it.</a>
-</aside>
+</Footer>
 
 
 </body>
