--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </details>
 
 <img src="newlogo.png">
+<!--footer-->
 
 <Footer>
 This page was created by Riya Raj & collen ven lent. To know more about web design.
