--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 <img src="newlogo.png">
 <!--footer-->
 
+<Div>
 <Footer>
 This page was created by Riya Raj & collen ven lent. To know more about web design.
 <a href="https://www.nvii-media.com/"> visit it.</a>
 </Footer>
+</Div>
 
 
 </body>
