--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li><label for="file">progress in specilazation capstone (20%) </label>
 <progress id="file" value="20" max="20%">20%</progress></li>
 
-<Li><label for="file"> <span>progress in goals (67%)</span> </label>
+<li><label for="file"> <span>progress in goals (67%)</span> </label>
 <progress id="file" value="67" max="67%">67%</progress></Li>
 
 <!--summary-->
@@ -66,10 +66,10 @@
 <img src="newlogo.png">
 <!--footer-->
 
-<Footer>
+<footer>
 This page was created by Riya Raj & collen ven lent. To know more about web design.
 <a href="https://www.nvii-media.com/"> visit it.</a>
-</Footer>
+</footer>
 
 
 
